# cppDL

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  xor.cpp
examples/: CMakeLists.txt  test_xor.py  xor.cpp
network/: CMakeLists.txt  activation.hpp  functions.hpp  layer.hpp  loss_layer.hpp  network.hpp  neuron.hpp  softmax_cross_entropy_loss.hpp  train.hpp
network/interfaces/: CMakeLists.txt  layer.hpp  loss.hpp
network/layers/: CMakeLists.txt  embedding.hpp  linear.hpp
network/losses/: CMakeLists.txt  logits_cross_entropy_loss.hpp  softmax_cross_entropy_loss.hpp
transformer/: CMakeLists.txt  bigram.hpp  gpt.cpp  main.cpp  tokenizer.hpp
utils/: CMakeLists.txt  dataset_util.cpp  dataset_util.h  debug.hpp
